# wh40k-match-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
wh40k_bot/: config.py  main.py  scheduler.py
wh40k_bot/bot/: utils.py
wh40k_bot/bot/handlers/callbacks/: __init__.py  admin.py  army_list.py  cards.py  game.py  mission.py
wh40k_bot/bot/handlers/commands/: __init__.py  admin.py  user.py
wh40k_bot/services/: datasource_service.py
