[project]
name = "wh-match-bot"
version = "0.1.0"
description = "Telegram bot for organizing Warhammer 40K matches"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13.1",
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",
    "redis>=5.2.0",
    "python-dotenv>=1.0.1",
    "aiohttp-socks>=0.11.0",
    "pillow>=12.1.1",
]

[project.scripts]
wh40k-bot = "wh40k_bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wh40k_bot"]
